0029602: Visualization, TKOpenGl - Size Culling is not properly handled within Perspective projection

OpenGl_BVHTreeSelector::isTooSmall() now takes into account distance
the distance between camera Eye and object Center
within perspective projection.